# rinha-backend-2025

./: .env-example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: on-push-to-main.yml
app/: main.py  models.py  queue.py  services.py  settings.py  tasks.py
